[package]
name = "rocks-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "3.2.8", features = [ "derive" ] }
counter = "0.5.5"
env_logger = "0.9.0"
log = "0.4.17"
rayon = "1.5.3"
# rkyv = { version = "0.7.39", features = [ "validation" ] }
rkyv = "0.7.39"
rocksdb = "0.18.0"
size = "0.4.0"
#sourmash = "0.11.0"
sourmash = { git = "https://github.com/sourmash-bio/sourmash", tag = "v4.4.0" }
twox-hash = "1.6.3"
