[package]
name = "rocks-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = [ "derive" ] }
env_logger = "0.9.0"
histogram = "0.6.9"
log = "0.4.17"
numsep = "0.1.12"
size = "0.4.0"
sourmash = { git = "https://github.com/sourmash-bio/sourmash", tag = "mastiff_roaring" }
